Fixed budget not showing

--- a/src/main/resources/view/css/MainWindow.css
+++ b/src/main/resources/view/css/MainWindow.css
@@ -87,3 +87,7 @@
 .tab:selected .focus-indicator {
 	-fx-border-color: none;
 }
+
+#statusbarPlaceholder {
+	-fx-background-color: #DDDDDD;
+}
